--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -130,7 +130,7 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FunctionUI.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="Mymath.h" />
     <ClInclude Include="RootUI.h" />
     <ClInclude Include="Textture.h" />
