--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -132,9 +132,11 @@
   <ItemGroup>
     <ClInclude Include="Button.h" />
     <ClInclude Include="Datagridview.h" />
+    <ClInclude Include="Icon.h" />
     <ClInclude Include="Json.h" />
     <ClInclude Include="Label.h" />
     <ClInclude Include="Mymath.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="RootUI.h" />
     <ClInclude Include="Stringextern.h" />
     <ClInclude Include="Textture.h" />
