--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -53,5 +53,11 @@
     <ClInclude Include="Stringextern.h">
       <Filter>Header Files\Data</Filter>
     </ClInclude>
+    <ClInclude Include="Icon.h">
+      <Filter>Header Files\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Point.h">
+      <Filter>Header Files\Data</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
